yaml/deploy.yaml
#@ load("@ytt:data", "data")
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-nodejs-app-deployment
  namespace: #@ data.values.namespace
spec:
  selector:
    matchLabels:
      app: test-nodejs-app
  replicas: 1
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: nodejs-data
      labels:
        app: test-nodejs-app
    spec:
      serviceAccountName: #@ data.values.service_account.name
      containers:
      - name: test-app
        image: harbor.dorn.gorke.ml/nodejs/sample-app:v0.2.6
        volumeMounts:
        - mountPath: /appdir
          name: nodejs-data
        ports:
        - containerPort: 3000
      volumes:
      - name: nodejs-data
        persistentVolumeClaim:
          claimName: nodejs-data
---
apiVersion: v1
kind: Service
metadata:
  name: test-nodejs-app
  namespace: #@ data.values.namespace
  labels:
    app: test-nodejs-app
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: test-nodejs-app
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-nodejs-app
  namespace: #@ data.values.namespace
  labels:
    app: test-nodejs-app
  annotations:
    kubernetes.io/ingress.class: contour
spec:
  rules:
  - host: #@ data.values.ingress.url
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
           name: test-nodejs-app
           port:
             number: 80
